export interface Demande {
  id: number;
  firstName: string;
  lastName: string;
  startingDate: Date;
  endingDate: Date;
  type: string;
  status: string;
  description: string;
}
